2007-04-08  Benoît Dejean  <benoit@placenet.org>

	* src/disks.cpp:

	Replaced a lot of custom code with
	gtk_tree_view_column_set_cell_data_func.
	There's only one issue : i don't know how to change the default
	sort order. This is a regression for #310804.

	* configure.in:

	Release number bumped to 2.20.1.

==== 2.18.1 ====

2007-04-05  Benoît Dejean  <benoit@placenet.org>

	* src/prettytable.cpp:
	* src/prettytable.h:
	
	Load icons only when needed.
	This speeds up startup.

2007-04-01  Benoît Dejean  <benoit@placenet.org>

	* src/disks.cpp:

	Simplified the treeview construction by reordering columns.

2007-04-01  Benoît Dejean  <benoit@placenet.org>

	* src/disks.cpp:
	
	More debug prints.

2007-03-30  Benoît Dejean  <benoit@placenet.org>

	* src/disks.cpp:

	No need for FP code.

2007-03-28  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/util.cpp:
	* src/util.h:
	
	Changes needed by incoming cleanup/fixes.
	
	procman::size_cell_data_func: new function.
	UnrefMapValues::operator(): added a check.

2007-03-27  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/interface.cpp:

	Little cleanup. Removed dozens of unnecessary gtk_widget_show.

2007-03-12  Benoît Dejean  <benoit@placenet.org>

	* NEWS:
	
	Released 2.18.0.

2007-03-12  Benoît Dejean  <benoit@placenet.org>

	* gnome-system-monitor.desktop.in.in:
	
	Dropped X-Red-Hat-Base.

2007-03-11  Benoît Dejean  <benoit@placenet.org>

	* gnome-system-monitor.desktop.in.in:
	
	Gnome Goal #3 : removed "Application" category from .desktop file.
	
	* src/callbacks.cpp:

	Fixed copyright and Paolo name.

2007-03-04  Benoît Dejean  <benoit@placenet.org>

	* src/interface.cpp:
	
	Fixed CPU labels layout when there is a lot of CPU.
	Closes bug #413919.

2007-03-04  Benoît Dejean  <benoit@placenet.org>

	* configure.in:
	* src/load-graph.cpp:
	
	Re-implemented the network autoscaling.
	It's nicer but the displayed scale is still meaningless.

2007-03-02  Benoît Dejean  <benoit@placenet.org>
