@@ -49,7 +49,6 @@ namespace {
 
     SysInfo()
     {
-      this->load_hostname();
       this->load_processors_info();
       this->load_memory_info();
       this->load_disk_info();
@@ -60,37 +59,6 @@ namespace {
     { }
 
   private:
-
-    void load_hostname()
-    {
-      char buf[256];
-
-      if (gethostname(buf, sizeof buf) == -1) {
-	g_warning("gethostname failed : %s", strerror(errno));
-	return;
-      }
-
-      struct hostent *h;
-
-      if (not (h = gethostbyname(buf))) {
-	g_warning("gethostbyname failed : %s", strerror(errno));
-	return;
-      }
-
-      this->hostname = h->h_name;
-
-      if (this->hostname.find("localhost") == 0) {
-	for (char **p = h->h_aliases; *p != NULL; ++p) {
-	  const string alias(*p);
-	  if (alias.find("localhost") == 0)
-	    continue;
-
-	  if (this->hostname.find("localhost") == 0
-	      or alias.size() > this->hostname.size())
-	    this->hostname = alias;
-	}
-      }
-    }
 
     void load_memory_info()
     {
@@ -154,6 +122,7 @@ namespace {
 
       uname(&name);
 
+      this->hostname = name.nodename;
       this->distro_name = name.sysname;
       this->distro_release = name.release;
     }
