@@ -1,3 +1,12 @@
+2007-04-10  Benoît Dejean  <benoit@placenet.org>
+
+	* src/sysinfo.cpp:
+
+	Displays `uname -n` instead of FQDN.
+	Code about handling FQDN was getting bigger and bigger
+	because of broken /etc/hosts.
+	Closes #427796.
+
 2007-04-08  Benoît Dejean  <benoit@placenet.org>
 
 	* src/disks.cpp:
